# tree-sitter-codeviews

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  EXECUTION_FLOWCHART.md  README.md  benchmark_comex.py  comex_benchmark_20260120_015508.csv  commands.txt  debug_output.dot  docker-compose.yml  setup.cfg  testfile.dot  testfile_dfg_debug.dot
c_cpp_test/: class_struct.cpp  direct_reference.cpp  double_pointer.c  double_pointer.cpp  error_1.c  error_1.java  error_1_class_struct.cpp  error_1_pass_by_ref.c  error_2_direct_reference.cpp  error_2_if_else.c  error_2_io.cpp  error_2_pure_virtual.cpp  error_3_io.cpp  error_3_pure_virtual.cpp  error_4_class.cpp  error_5_class_struct.cpp  error_5_namespace.cpp  error_7_inner_class.cpp  error_8_inner_class.cpp  errorlist.txt  fig1.cpp  fig2.cpp  floyd.java  function_pointer.c  function_test.cpp  if_else.c  if_else.cpp  inner_class.cpp  lambda.cpp  namespace.cpp  pass_by_ref.c  polymorphism.cpp  recursion.c  struct.c  template.cpp  test.java  test_runner.py  unique_ptr.cpp  var_arg.c
c_cpp_test/c/: error_5_if_else.c  if-else.c  multi_function_no_main.c  multi_function_with_main.c  recursion.c  switch.c  test.c
docs/: 01-getting-started.md  02-cli-reference.md  03-python-api.md  04-codeview-types.md  05-architecture.md  06-module-reference.md  07-extending-comex.md  08-development-guide.md  09-configuration-guide.md  10-troubleshooting.md  11-api-reference.md  12-examples.md  README.md  analysis.md
paper/: table_features.txt
sample/: errorlist.txt  test_c.c  test_cpp.cpp  test_java.java  testfile.cpp
(+136 files in other folders)
